fix: number position on iphone

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,10 +35,15 @@ body {
     flex-direction: column;
 }
 
+.glass-wrapper {
+  position: relative;
+}
+
 .glass {
     &__number {
         position: absolute;
-        margin: -180px -38px 0px 110px;
+        margin: -44% 50%;
+        transform: translate(-50%, -50%);
         font-weight: 500;
         font-size: 112px;
         line-height: 131px;
@@ -118,7 +123,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 812px;
+    max-height: 812px;
     min-height: 100vh;
     height: 100%;
     width: 100%;
@@ -182,6 +187,7 @@ body {
 // On/Off switch from https://proto.io/freebies/onoff/ generator
 
 .onoffswitch {
+  justify-self: flex-start;
   margin: 0 25px 4vw 250px;
   position: relative; width: 76px;
   -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
